@@ -1,1 +1,0 @@
-Acecad Flair input driver for the Xorg X server.
