@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2013/06/02 21:56:42 rodent Exp $
-lib/xorg/modules/input/acecad_drv.la
-man/man4/acecad.4
