@@ -1,6 +1,0 @@
-# $NetBSD: builtin.mk,v 1.1 2021/12/03 12:47:53 nia Exp $
-
-X11_BUILTIN_NAME=	xf86-input-acecad
-X11_DRV_NAME=		acecad_drv
-
-.include "../../meta-pkgs/modular-xorg-drivers/builtin-common.mk"
